--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);@import url(/assets/plugin/bootstrap-4.0/bootstrap.min.css);@import url(/assets/plugin/select2-4.1/select2.min.css);@import url(/assets/css/index.css);.toast-title {
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);@import url(/assets/plugin/bootstrap-4.0/bootstrap.min.css);@import url(/assets/plugin/select2-4.1/select2.min.css);@import url(/assets/plugin/datepicker-1.9/datepicker.min.css);@import url(/assets/css/index.css);.toast-title {
   font-weight: 700;
 }
 
