--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,5 +13,8 @@
 // Select2
 @import url('/assets/plugin/select2-4.1/select2.min.css');
 
+// Select2
+@import url('/assets/plugin/datepicker-1.9/datepicker.min.css');
+
 // Asset
 @import url('/assets/css/index.css');
