--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -3,6 +3,7 @@
 @import url('./form.css');
 @import url('./login.css');
 @import url('./video.css');
+@import url('./lending.css');
 
 body{
 	background: #ECECF9;
