--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -4,6 +4,7 @@
 @import url('./login.css');
 @import url('./video.css');
 @import url('./lending.css');
+@import url('./courses.css');
 
 body{
 	background: #ECECF9;
