--- a/public/assets/css/courses.css
+++ b/public/assets/css/courses.css
@@ -41,6 +41,11 @@
 	width: 100%;
 	height: 200px;
 	border-radius: 15px;
+	overflow: hidden;
+}
+.courses-information-fly .courses-thumbnail img{
+	width: 100%;
+	height: 200px;
 }
 .courses-information-fly .courses-price{
 	padding: 10px 0px;
@@ -68,6 +73,7 @@
 .courses-materi .materi-group{
 	list-style-type: none;
 	margin: 0px;
+	min-height: 250px;
 	padding: 5px 0px;
 }
 .materi-group .materi-item{
@@ -109,6 +115,9 @@
 .courses-information .courses-subtitle{
 	font-size: 17px;
 	font-weight: 400;
+}
+.courses-information .courses-description{
+	min-height: 180px;
 }
 
 .courses-rating-star .courses-rating-label{
