--- a/public/assets/css/courses.css
+++ b/public/assets/css/courses.css
@@ -2,7 +2,7 @@
 	background: #4B4AEF!important;
 	color: #FFFFFF;
 }
-.btn-default, .btn:hover{
+.btn-default:hover{
 	background: #4B4AEF!important;
 	color: #FFFFFF;
 }
