--- a/public/assets/css/lending.css
+++ b/public/assets/css/lending.css
@@ -66,15 +66,29 @@
 	font-weight: 500;
 	letter-spacing: 1px;
 }
-.navbar-item.special{
+.navbar-item.special-login{
 	background: #0E0E0E;
 	color: #FFFFFF;
-	padding: 5px 0px;
+	padding: 5px 15px;
 	border-radius: 10px;
 }
-.navbar-item.special a{
+.navbar-item.special-profile{
+	background: #FFFFFF;
+	color: #20B2AA;
+	padding: 5px 15px;
+	max-width: 100px;
+	height: 35px;
+	overflow: hidden;
+	border-radius: 10px;
+}
+.navbar-item.special-login a{
 	color: #FFFFFF;
-	font-weight: 500;
+	font-weight: 600;
+	letter-spacing: 1px;
+}
+.navbar-item.special-profile a{
+	color: #20B2AA;
+	font-weight: 600;
 	letter-spacing: 1px;
 }
 
