--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -6,7 +6,6 @@
 	.courses-page{
 		background: #FFFFFF;
 		width: 100%;
-		height: 700px;
 	}
 	.courses-page .courses-profile-title{
 		color: #000000;
@@ -44,6 +43,7 @@
 		border-radius: 50%;
 	}
 	.profile-page .profile-infomation{
+		width: 100%;
 		padding: 10px 50px;
 	}
 	.profile-infomation .profile-nama{
@@ -94,6 +94,7 @@
 
 	@media screen and (max-width: 720px) {
 		.profile-page{
+			width: 100%;
 			margin: 0px;
 			padding: 25px;
 			display: inline-block;
