Fix Bug | Logout User | Video Player UI

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -2,12 +2,12 @@
 @import url('./table.css');
 @import url('./form.css');
 @import url('./login.css');
-@import url('./video.css');
 @import url('./lending.css');
 @import url('./courses.css');
 @import url('./profile.css');
 @import url('./profileEdit.css');
 @import url('./payment.css');
+@import url('./player.css');
 
 body{
 	background: #ECECF9;
