--- a/public/assets/css/payment.css
+++ b/public/assets/css/payment.css
@@ -61,6 +61,10 @@
 	font-size: 20px;
 	font-weight: 600;
 }
+.account-bayar .account{
+	font-size: 12px;
+	font-weight: 500;
+}
 
 .payment-item .payment-item_image img{
 	width: 150px;
